# SpiceH264

./: .gitignore  README.md  build-libspice.sh  build-qemu.sh  build-spice-gtk.sh  build-spice-protocol.sh  clear.sh  config-env.sh  install_win7.sh  start_vm.sh
spice-0.12.6/: ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac  spice-server.pc.in
spice-0.12.6/autom4te.cache/: output.1  requests  traces.0  traces.1
spice-0.12.6/docs/: Makefile.in
spice-0.12.6/docs/manual/: Makefile.in  manual.html  manual.txt
spice-0.12.6/m4/: spice-compile-warnings.m4
spice-0.12.6/server/: Makefile.am  Makefile.in  char_device.c  char_device.h  dispatcher.c  dispatcher.h  glz_encode_match_tmpl.c  glz_encode_tmpl.c  glz_encoder.c  glz_encoder_config.h  glz_encoder_dictionary.c  glz_encoder_dictionary_protected.h  inputs_channel.c  jpeg_encoder.c  lz4_encoder.c  lz4_encoder.h  main_channel.c  main_channel.h  migration_protocol.h  mjpeg_encoder.c  mjpeg_encoder.h  red_bitmap_utils.h  red_channel.c  red_channel.h  red_client_shared_cache.h  red_common.h  red_dispatcher.c  red_dispatcher.h  red_parse_qxl.c  red_record_qxl.c  red_record_qxl.h  red_replay_qxl.c  red_replay_qxl.h  red_worker.c  red_worker.h  reds-private.h  reds.c  reds.h  reds_gl_canvas.c  reds_gl_canvas.h  (+21 more)
spice-0.12.6/server/tests/: Makefile.am  Makefile.in  basic_event_loop.c  replay.c  test_display_base.c  test_display_no_ssl.c  test_display_resolution_changes.c  test_display_streaming.c  test_display_width_stride.c  test_empty_success.c  test_playback.c  test_two_servers.c  test_vdagent.c
spice-0.12.6/spice-common/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure
spice-0.12.6/spice-common/autom4te.cache/: output.0  requests  traces.0  traces.1
spice-0.12.6/spice-common/common/: Makefile.in  canvas_base.c  client_marshallers.h  generated_server_marshallers.c  gl_canvas.h  lines.c  marshaller.c  messages.h  pixman_utils.c  sw_canvas.c  sw_canvas.h
spice-gtk-0.30/: .version  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  spice-client-glib-2.0.pc.in
spice-gtk-0.30/data/: Makefile.am  Makefile.in  spicy.nsis  spicy.nsis.in
spice-gtk-0.30/doc/: Makefile.in
spice-gtk-0.30/doc/reference/: Makefile.am  Makefile.in  spice-gtk-docs.xml  spice-gtk-sections.txt  spice-gtk.types
spice-gtk-0.30/m4/: spice-compile-warnings.m4
spice-gtk-0.30/man/: Makefile.am  Makefile.in  spice-client.1  spice-client.pod
spice-gtk-0.30/po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  fr.po
spice-gtk-0.30/spice-common/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
spice-gtk-0.30/spice-common/common/: Makefile.am  Makefile.in  canvas_base.c  canvas_utils.c  draw.h  gdi_canvas.c  generated_client_marshallers.c  generated_server_demarshallers.c  generated_server_marshallers.h  gl_canvas.c  glc.c  log.c  marshaller.c  messages.h  quic.c  rop3.c  sw_canvas.c
spice-gtk-0.30/spice-common/m4/: spice-deps.m4
spice-gtk-0.30/src/: Makefile.am  Makefile.in  channel-display.c  channel-inputs.c  channel-inputs.h  channel-main.c  channel-main.h  channel-playback.c  channel-port.c  channel-record.c  channel-usbredir.c  coroutine_winfibers.c  desktop-integration.c  glib-compat.c  glib-compat.h  gtk-compat.h  map-file  smartcard-manager.c  smartcard-manager.h  spice-audio.c  spice-channel-cache.h  spice-channel.c  spice-channel.h  spice-client-glib-usb-acl-helper.c  spice-client.c  spice-client.h  spice-glib-sym-file  spice-grabsequence.c  spice-grabsequence.h  spice-gtk-session-priv.h  spice-gtk-session.c  spice-gtk-session.h  spice-option.c  spice-session.c  spice-session.h  spice-uri.h  spice-util.c  spice-version.h  spice-version.h.in  spice-widget.c  (+14 more)
spice-gtk-0.30/src/controller/: Makefile.am  Makefile.in  controller.c  controller.vala  dump.c  foreign-menu.c  menu.c  namedpipe.c  namedpipeconnection.c  namedpipelistener.c  namedpipelistener.h  spice-controller.h  (+8 more)
spice-gtk-0.30/tests/: Makefile.am  Makefile.in  coroutine.c  pipe.c  session.c  util.c
spice-gtk-0.30/vapi/: Makefile.am  Makefile.in
spice-gtk3-0.22/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  spice-client-gtk-2.0.pc.in  spice-client-gtk-3.0.pc.in  spice-controller.pc.in
spice-gtk3-0.22/data/: Makefile.am  Makefile.in  org.spice-space.lowlevelusbaccess.policy  spice-mime.xml.in  spicy.desktop.in  spicy.nsis  spicy.nsis.in
spice-gtk3-0.22/doc/: Makefile.in
spice-gtk3-0.22/gtk/: Makefile.am  Makefile.am.orig  Makefile.in  Makefile.in.orig  channel-cursor.c  channel-display-mjpeg.c  channel-display.c  channel-main.c  channel-record.c  channel-smartcard.c  coroutine_winfibers.c  decode-glz.c  decode-jpeg.c  decode-zlib.c  map-file  spice-channel-priv.h  spice-channel.c  spice-channel.h  spice-client-glib-usb-acl-helper.c  spice-glib-sym-file  spice-gstaudio.c  spice-gtk-session.c  spice-gtk-sym-file  spice-option.c  spice-pulse.c  spice-session-priv.h  spice-session.c  spice-widget-cairo.c  spice-widget-x11.c  spice-widget.c  spicy-screenshot.c  spicy-stats.c  spicy.c  usb-device-manager.c  usb-device-widget.c  usb-device-widget.h  win-usb-dev.c
spice-gtk3-0.22/m4/: check_python.m4
spice-gtk3-0.22/po/: POTFILES.in  POTFILES.skip
spice-gtk3-0.22/spice-common/: Makefile.in  aclocal.m4  configure  configure.ac  spice.proto  spice_codegen.py
spice-gtk3-0.22/tests/: Makefile.am  Makefile.in  util.c
spice-gtk3-0.22/vapi/: Makefile.am  Makefile.in  SpiceClientGLib-2.0.metadata  spice-client-gtk-2.0.deps
spice-protocol-0.12.10/: Makefile.am  Makefile.in  NEWS  aclocal.m4  configure  configure.ac  spice-protocol.pc.in  spice.proto  spice1.proto  spice_codegen.py
spice-protocol-0.12.10/python_modules/: Makefile.am  Makefile.in  codegen.py  demarshal.py  marshal.py  ptypes.py  spice_parser.py
spice-protocol-0.12.10/spice/: Makefile.am  Makefile.in  controller_prot.h  enums.h  foreign_menu_prot.h  macros.h  protocol.h  qxl_dev.h  vd_agent.h
(+335 files in other folders)
