NULL =
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = common

MAINTAINERCLEANFILES =						\
	$(srcdir)/INSTALL					\
	$(srcdir)/aclocal.m4					\
	$(srcdir)/autoscan.log					\
	$(srcdir)/build-aux					\
	$(srcdir)/config.h.in					\
	$(srcdir)/m4/libtool.m4					\
	$(srcdir)/m4/ltoptions.m4				\
	$(srcdir)/m4/ltsugar.m4					\
	$(srcdir)/m4/ltversion.m4				\
	$(srcdir)/m4/lt~obsolete.m4				\
	`find "$(srcdir)" -type f -name Makefile.in -print`	\
	$(NULL)

-include $(top_srcdir)/git.mk
