NULL=

EXTRA_DIST =					\
	spicy.nsis				\
	spice-protocol.vapi			\
	gtkrc					\
	$(desktop_in_files)			\
	org.spice-space.lowlevelusbaccess.policy \
	$(NULL)

vapidir = $(VAPIDIR)
vapi_DATA = spice-protocol.vapi

policydir = $(POLICYDIR)
policy_DATA = org.spice-space.lowlevelusbaccess.policy

-include $(top_srcdir)/git.mk
